	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.6-trunk

# (r1018)
# TODO: unfinished, undocumented
 * added command line switch  -/  <arg> as short for -c /<arg>
 * added command line switch --// <arg> as short for -c /<arg> with _re_search_opts='f'
# (r1015)
 * will emit a status message when limiting long lists.
# (r1014)
 * Default key for 'scrollforward' is now space (' ') instead of 's'.
# (r1013)
 * introduced context prepend/append shebang syntax "#!fim:^=" and "#!fim:+=" in description files.
   (FIXME: undocumented)
# (r1011)
 * fix: removed obsolete documentation for the "window" command, now disabled.
# (r1010)
 * introduced the 'list "swap"' command.
# (r1009)
 * bugfix: repeating "recording 'repeat_last'" (default '.' key) by prepending a number now works.
# (r1008)
 * switch --read-from-stdin-elds supports now the ASCII NUL terminator (via '').
# (r1007)
 * switch -V (--version) will print out libspectre version info.
# (r1006)
 * switch -V (--version) will print to stdout (not anymore to stderr).
# (r1004)
 * introduced 'list "dumpmarked"' and 'list "unmarkall"' commands.
# (r1003)
 * the -B switch is now short for --background-recursive.
# (r1002)
 * the -S switch is now short for --image-descriptions-file-separator (not anymore for --sanity-check).
# (r1001)
 * the -D switch is now short for --load-image-descriptions-file (not anymore for --dump-default-fimrc).
# (r999,r1000)
 * introduced -L/--read-from-file switch: read an image list from file (similarly to the - switch).
# (r971)
 * introduced new variable _cache_control to control the cache mechanism
 * now caching of mipmaps on by default; can be turned off with _cache_control
# (r965)
 * if _push_pushes_dirs is 2, will also push hidden files and directories; that is,
   ones whose names begin with a dot (.)
# (r963)
 * if configure'ing with --enable-c++11, the --background-recursive switch will load