@@ -272,6 +272,7 @@ AC_CHECK_FUNCS([bcopy bcmp])
 AC_CHECK_FUNCS([drand48 random rand])
 AC_CHECK_FUNCS([fileno])
 AC_CHECK_FUNCS([fmemopen])
+AC_CHECK_HEADERS([wordexp.h glob.h fnmatch.h])
 dnl AC_FUNC_REALLOC()	dnl triggers error in automake 1.10.1
 
 #AC_CHECK_HEADERS([stddef.h])
